fixing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100%;
-  height: 100%;
   color: white;
-  /* background-attachment: fixed; */
-  /* background: papayawhip; */
 }
 
-html,
+html {
+  overflow: auto;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -28,10 +27,10 @@ code {
 html {
   height: 100%;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  overflow: hidden;
 }
 
 #stars {
+  overflow: hidden;
   width: 1px;
   height: 1px;
   background: transparent;
@@ -401,6 +400,7 @@ html {
 }
 
 #stars2 {
+  overflow: hidden;
   width: 2px;
   height: 2px;
   background: transparent;
@@ -518,6 +518,7 @@ html {
 }
 
 #stars3 {
+  overflow: hidden;
   width: 3px;
   height: 3px;
   background: transparent;
